[package]
name          = "proptest-arbitrary"
version       = "0.2.1"
authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
readme        = "README.md"

repository    = "https://github.com/Centril/proptest-arbitrary"
documentation = "https://docs.rs/proptest-arbitrary"

keywords      = ["arbitrary", "property", "testing", "quickcheck", "hypothesis"]
categories    = ["development-tools::testing"]

description = """
The Arbitrary trait for proptest and implementations for the standard library.
"""

build = "build.rs"

[build-dependencies]
version_check = "0.1"

[badges]

maintenance = { status = "experimental" }

[features]

#default = ["frunk"]
default = ["frunk"]

# Enables nightly features of Rust.
unstable = []

# Uses frunk_core and frunk_derives for Hlist and generic.
frunk = ["frunk_core", "frunk_derives"]

[dependencies]
proptest = "0.3.4"

frunk_core = { version = "0.0.21", optional = true }
    #{ git = "https://github.com/Centril/frunk", branch = "feature/partial-default-and-conversions" }
frunk_derives = { version = "0.0.22", optional = true }
    #{ git = "https://github.com/Centril/frunk", branch = "feature/partial-default-and-conversions" }

derive_more = "0.7.0"
bit-set  = "0.4.0"